// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserGroupModal /> should render correctly with 2 groups 1`] = `
<div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <b>
          <FormattedMessage
            id="people-with-access-to-project"
            values={Object {}}
          />
        </b>
      </ModalTitle>
    </ModalHeader>
    <ListGroupFlush
      className="d-flex text-left"
      striped={false}
    >
      <ListGroupItem
        bsClass="list-group-item"
        id="group2"
        key="group2"
        listItem={false}
      >
        <GroupAvatar
          className="img-circle avatar avatar-group mr-10"
          size={35}
        />
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="link"
          className="btn-md p-0"
          disabled={false}
          onClick={[Function]}
          title="persons-in-the-group"
        >
          Un groupe cool
        </Button>
        <ForwardRef(Relay(injectIntl(UserInGroupModal)))
          group={
            Object {
              "$fragmentRefs": null,
              "id": "group2",
              "title": "Un groupe cool",
            }
          }
          handleClose={[Function]}
          show={false}
        />
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        id="group3"
        key="group3"
        listItem={false}
      >
        <GroupAvatar
          className="img-circle avatar avatar-group mr-10"
          size={35}
        />
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="link"
          className="btn-md p-0"
          disabled={false}
          onClick={[Function]}
          title="persons-in-the-group"
        >
          mon super groupe 2
        </Button>
        <ForwardRef(Relay(injectIntl(UserInGroupModal)))
          group={
            Object {
              "$fragmentRefs": null,
              "id": "group3",
              "title": "mon super groupe 2",
            }
          }
          handleClose={[Function]}
          show={false}
        />
      </ListGroupItem>
    </ListGroupFlush>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.close"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;

exports[`<UserGroupModal /> should render correctly with load more 1`] = `
<div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <b>
          <FormattedMessage
            id="people-with-access-to-project"
            values={Object {}}
          />
        </b>
      </ModalTitle>
    </ModalHeader>
    <ListGroupFlush
      className="d-flex text-left"
      striped={false}
    >
      <ListGroupItem
        bsClass="list-group-item"
        id="group2"
        key="group2"
        listItem={false}
      >
        <GroupAvatar
          className="img-circle avatar avatar-group mr-10"
          size={35}
        />
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="link"
          className="btn-md p-0"
          disabled={false}
          onClick={[Function]}
          title="persons-in-the-group"
        >
          Un groupe cool
        </Button>
        <ForwardRef(Relay(injectIntl(UserInGroupModal)))
          group={
            Object {
              "$fragmentRefs": null,
              "id": "group2",
              "title": "Un groupe cool",
            }
          }
          handleClose={[Function]}
          show={false}
        />
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        id="group3"
        key="group3"
        listItem={false}
      >
        <GroupAvatar
          className="img-circle avatar avatar-group mr-10"
          size={35}
        />
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="link"
          className="btn-md p-0"
          disabled={false}
          onClick={[Function]}
          title="persons-in-the-group"
        >
          mon super groupe 2
        </Button>
        <ForwardRef(Relay(injectIntl(UserInGroupModal)))
          group={
            Object {
              "$fragmentRefs": null,
              "id": "group3",
              "title": "mon super groupe 2",
            }
          }
          handleClose={[Function]}
          show={false}
        />
      </ListGroupItem>
      <div
        className="text-center"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            id="global.more"
            values={Object {}}
          />
        </Button>
      </div>
    </ListGroupFlush>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.close"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;

exports[`<UserGroupModal /> should render correctly without group 1`] = `
<div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <b>
          <FormattedMessage
            id="people-with-access-to-project"
            values={Object {}}
          />
        </b>
      </ModalTitle>
    </ModalHeader>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.close"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;
